docs: Enhance linting documentation with detailed rule descriptions and examples

--- a/docs/rules/QAS001.md
+++ b/docs/rules/QAS001.md
@@ -40,7 +40,9 @@ include "stdgates.qasm";
 qubit q;
 
 h q;  // ✅ Qubit is used
-```## Configuration
+```
+
+## Configuration
 
 - **Enabled by default:** true
 - **Match type:** declaration
