--- a/docs/rules/QAS002.md
+++ b/docs/rules/QAS002.md
@@ -43,7 +43,9 @@ bit[2] c;  // ✅ Sufficient bits for measurements
 
 h q;
 measure q -> c;
-```## Configuration
+```
+
+## Configuration
 
 - **Enabled by default:** true
 - **Match type:** statement
