--- a/docs/rules/QAS003.md
+++ b/docs/rules/QAS003.md
@@ -42,7 +42,9 @@ bit c;
 
 h q;          // ✅ Affect qubit before measurement
 measure q -> c;
-```## Configuration
+```
+
+## Configuration
 
 - **Enabled by default:** true
 - **Match type:** statement
