--- a/docs/rules/QAS004.md
+++ b/docs/rules/QAS004.md
@@ -39,7 +39,9 @@ include "stdgates.qasm";
 qubit[4] q;
 
 h q[3];  // ✅ Index 3 is within bounds [0,3]
-```## Configuration
+```
+
+## Configuration
 
 - **Enabled by default:** true
 - **Match type:** statement
