--- a/docs/rules/QAS005.md
+++ b/docs/rules/QAS005.md
@@ -37,7 +37,9 @@ include "stdgates.qasm";
 
 qubit myQubit;  // ✅ Starts with lowercase
 qubit q2;       // ✅ Valid naming convention
-```## Configuration
+```
+
+## Configuration
 
 - **Enabled by default:** true
 - **Match type:** declaration
