Refactor code structure for improved readability and maintainability

--- a/docs/rules/QAS001.md
+++ b/docs/rules/QAS001.md
@@ -3,6 +3,7 @@
 **Severity:** warning  
 **Category:** qasm3, readability, unused-variables  
 **Fixable:** false  
+**OpenQASM Specification:** [View Details](https://openqasm.com/versions/3.0/language/types.html#qubits)  
 
 ## Description
 
@@ -10,7 +11,7 @@ Detects qubits that are declared but never used in gates or measurements.
 
 ## Rule Details
 
-This rule checks for unused-qubit violations.
+This rule checks for unused qubit violations according to OpenQASM 3.0 specifications.
 
 ## Message Format
 
@@ -23,23 +24,16 @@ Qubit '{{ name }}' is declared but never used.
 ### ❌ Incorrect
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
 qubit q;
-qubit unused_qubit;  // ❌ Never used
-
+qubit unused_qubit;  // Never used
 h q;
 ```
+
 ### ✅ Correct
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
 qubit q;
-
-h q;  // ✅ Qubit is used
+h q;  // Qubit is used
 ```
 
 ## Configuration
@@ -50,4 +44,9 @@ h q;  // ✅ Qubit is used
 
 ## Related Rules
 
-- QAS005 (naming-convention-violation): Both relate to variable declaration best practices
+- [QAS005](QAS005.md) (naming-convention-violation): Both relate to declaration best practices
+- [QAS008](QAS008.md) (qubit-declared-in-local-scope): Both relate to qubit declaration
+## References
+
+- [OpenQASM 3.0 Specification](https://openqasm.com/versions/3.0/language/types.html#qubits)
+- [Rule Documentation](https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS001.md)
