--- a/docs/rules/QAS002.md
+++ b/docs/rules/QAS002.md
@@ -1,21 +1,22 @@
-# insufficient-classical-bits (QAS002)
+# undefined-identifier (QAS002)
 
 **Severity:** error  
-**Category:** qasm3, correctness, measurement  
+**Category:** qasm3, scope, semantic  
 **Fixable:** false  
+**OpenQASM Specification:** [View Details](https://openqasm.com/versions/3.0/language/scope.html)  
 
 ## Description
 
-Detects when the number of classical bits is insufficient for measurements.
+Identifier is used without being declared.
 
 ## Rule Details
 
-This rule checks for insufficient-classical-bits violations.
+This rule checks for undefined identifier violations according to OpenQASM 3.0 specifications.
 
 ## Message Format
 
 ```
-Insufficient classical bits for measurements. Need {{ required }} but only {{ available }} declared.
+Identifier '{{ name }}' is not declared.
 ```
 
 ## Examples
@@ -23,35 +24,27 @@ Insufficient classical bits for measurements. Need {{ required }} but only {{ av
 ### ❌ Incorrect
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
-qubit[2] q;
-bit c;  // ❌ Only 1 bit for 2 measurements
-
-h q;
-measure q -> c;
+h q[0];  // q is undefined
 ```
+
 ### ✅ Correct
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
-qubit[2] q;
-bit[2] c;  // ✅ Sufficient bits for measurements
-
-h q;
-measure q -> c;
+qubit q;
+h q[0];
 ```
 
 ## Configuration
 
 - **Enabled by default:** true
-- **Match type:** statement
-- **Match kind:** measure
+- **Match type:** usage
+- **Match kind:** identifier
 
 ## Related Rules
 
-- QAS003 (constant-measured-bit): Both relate to measurement operations
-- QAS004 (exceeding-qubit-limits): Both relate to array bounds checking
+- [QAS004](QAS004.md) (out-of-bounds-index): Both relate to identifier usage validation
+- [QAS008](QAS008.md) (qubit-declared-in-local-scope): Both relate to scope management
+## References
+
+- [OpenQASM 3.0 Specification](https://openqasm.com/versions/3.0/language/scope.html)
+- [Rule Documentation](https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS002.md)
