--- a/docs/rules/QAS003.md
+++ b/docs/rules/QAS003.md
@@ -3,19 +3,20 @@
 **Severity:** warning  
 **Category:** qasm3, logic, measurement, constant-results  
 **Fixable:** false  
+**OpenQASM Specification:** [View Details](https://openqasm.com/versions/3.0/language/quantum.html#measurement)  
 
 ## Description
 
-Detects measurements of qubits that have not been affected by any gates, resulting in constant measurement outcomes.
+Measuring a qubit that has no gates applied. The result will always be |0⟩.
 
 ## Rule Details
 
-This rule checks for constant-measured-bit violations.
+This rule checks for constant measured bit violations according to OpenQASM 3.0 specifications.
 
 ## Message Format
 
 ```
-Measuring qubit '{{ name }}' that has not been affected by any gates will always yield |0⟩.
+Measuring qubit '{{ name }}' that has no gates applied. The result will always be |0⟩.
 ```
 
 ## Examples
@@ -23,24 +24,17 @@ Measuring qubit '{{ name }}' that has not been affected by any gates will always
 ### ❌ Incorrect
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
 qubit q;
 bit c;
-
-measure q -> c;  // ❌ Measuring unaffected qubit
+measure q -> c;  // q has no gates applied
 ```
+
 ### ✅ Correct
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
 qubit q;
 bit c;
-
-h q;          // ✅ Affect qubit before measurement
+h q;  // apply gate first
 measure q -> c;
 ```
 
@@ -52,4 +46,8 @@ measure q -> c;
 
 ## Related Rules
 
-- QAS002 (insufficient-classical-bits): Both relate to measurement operations
+- [QAS010](QAS010.md) (invalid-instruction-in-gate): Both relate to measurement operations
+## References
+
+- [OpenQASM 3.0 Specification](https://openqasm.com/versions/3.0/language/quantum.html#measurement)
+- [Rule Documentation](https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS003.md)
