--- a/docs/rules/QAS004.md
+++ b/docs/rules/QAS004.md
@@ -1,21 +1,22 @@
-# exceeding-qubit-limits (QAS004)
+# out-of-bounds-index (QAS004)
 
 **Severity:** error  
 **Category:** qasm3, bounds-checking, array-access  
 **Fixable:** false  
+**OpenQASM Specification:** [View Details](https://openqasm.com/versions/3.0/language/types.html#index-sets-and-slicing)  
 
 ## Description
 
-Detects when qubit or classical bit array indices exceed declared bounds.
+Index of qubit, bit, or array exceeds the defined size.
 
 ## Rule Details
 
-This rule checks for exceeding-qubit-limits violations.
+This rule checks for out of bounds index violations according to OpenQASM 3.0 specifications.
 
 ## Message Format
 
 ```
-Array index out of bounds: {{ issue }}
+Index out of bounds: accessing '{{ index }}' on '{{ name }}' of length {{ length }}.
 ```
 
 ## Examples
@@ -23,22 +24,15 @@ Array index out of bounds: {{ issue }}
 ### ❌ Incorrect
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
 qubit[2] q;
-
-h q[3];  // ❌ Index 3 exceeds array bounds [0,1]
+h q[2];  // q[2] does not exist
 ```
+
 ### ✅ Correct
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
-qubit[4] q;
-
-h q[3];  // ✅ Index 3 is within bounds [0,3]
+qubit[2] q;
+h q[1];  // valid index
 ```
 
 ## Configuration
@@ -49,4 +43,9 @@ h q[3];  // ✅ Index 3 is within bounds [0,3]
 
 ## Related Rules
 
-- QAS002 (insufficient-classical-bits): Both relate to array bounds checking
+- [QAS002](QAS002.md) (undefined-identifier): Both relate to identifier validation
+- [QAS006](QAS006.md) (gate-register-size-mismatch): Both relate to array bounds checking
+## References
+
+- [OpenQASM 3.0 Specification](https://openqasm.com/versions/3.0/language/types.html#index-sets-and-slicing)
+- [Rule Documentation](https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS004.md)
