--- a/docs/rules/QAS005.md
+++ b/docs/rules/QAS005.md
@@ -3,19 +3,20 @@
 **Severity:** warning  
 **Category:** qasm3, style, naming, readability  
 **Fixable:** false  
+**OpenQASM Specification:** [View Details](https://openqasm.com/versions/3.0/language/lexical.html#identifiers)  
 
 ## Description
 
-Detects violations of OpenQASM naming conventions for variables and circuits.
+Identifier name violates OpenQASM naming conventions.
 
 ## Rule Details
 
-This rule checks for naming-convention-violation violations.
+This rule checks for naming convention violation violations according to OpenQASM 3.0 specifications.
 
 ## Message Format
 
 ```
-Identifier '{{ name }}' violates naming convention. Should match pattern: ^[a-z][a-zA-Z0-9_]*$
+Identifier '{{ name }}' violates naming conventions. Follow pattern: ^[a-z][a-zA-Z0-9_]*$.
 ```
 
 ## Examples
@@ -23,20 +24,13 @@ Identifier '{{ name }}' violates naming convention. Should match pattern: ^[a-z]
 ### ❌ Incorrect
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
-qubit MyQubit;  // ❌ Should start with lowercase
-qubit q_2;      // ❌ Should not start with uppercase
+qubit[2] MyQubit;  // starts with uppercase
 ```
+
 ### ✅ Correct
 
 ```qasm
-OPENQASM 3.0;
-include "stdgates.qasm";
-
-qubit myQubit;  // ✅ Starts with lowercase
-qubit q2;       // ✅ Valid naming convention
+qubit[2] myQubit;  // starts with lowercase
 ```
 
 ## Configuration
@@ -47,4 +41,9 @@ qubit q2;       // ✅ Valid naming convention
 
 ## Related Rules
 
-- QAS001 (unused-qubit): Both relate to variable declaration best practices
+- [QAS001](QAS001.md) (unused-qubit): Both relate to declaration best practices
+- [QAS012](QAS012.md) (snake-case-required): Both relate to naming conventions
+## References
+
+- [OpenQASM 3.0 Specification](https://openqasm.com/versions/3.0/language/lexical.html#identifiers)
+- [Rule Documentation](https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS005.md)
